[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "cbic-rl"
version = "1.0.0"
description = "CBIC customs cargo inspection RL environment compatible with OpenEnv workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.0",
  "openai>=1.0",
  "pyyaml>=6.0",
  "httpx>=0.27.0",
  "websockets>=12.0",
  "openenv-core>=0.2.3",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
  "pytest>=8.0.0",
  "openenv>=0.1.13",
  "uv>=0.5.0",
]

[project.scripts]
server = "server:main"

[tool.hatch.build.targets.wheel]
packages = ["environment"]
include = [
  "client.py",
  "server.py",
  "inference.py",
  "openenv.yaml",
]
